--- a/hyprland.conf
+++ b/hyprland.conf
@@ -35,7 +35,7 @@ monitor=,preferred,auto,1.25
 
 # Set programs that you use
 $terminal = alacritty
-$fileManager = dolphin
+$fileManager = nautilus --new-window
 $menu = rofi -show drun
 
 
