added keybind for screenshots

--- a/hyprland.conf
+++ b/hyprland.conf
@@ -230,6 +230,10 @@ bind = $mainMod, L, changegroupactive, f
 bind = $mainMod, H, changegroupactive, b
 bind = $mainMod, B, exec, pgrep -x "waybar" > /dev/null && pkill waybar || waybar &
 
+bind = $mainMod, Print, exec, grim ~/Pictures/Screenshots/screenshot_$(date +%s).png   # Screenshot full screen
+bind = $mainMod SHIFT, Print, exec, grim -g "$(slurp)" ~/Pictures/Screenshots/screenshot_$(date +%s).png   # Screenshot region
+bind = $mainMod CTRL, Print, exec, grim -g "$(slurp)" - | wl-copy   # Screenshot region to clipboard
+
 # Move focus with mainMod + arrow keys
 bind = $mainMod, H, movefocus, l
 bind = $mainMod, L, movefocus, r
