added shortcut to move and resize window

--- a/hyprland.conf
+++ b/hyprland.conf
@@ -46,7 +46,6 @@ $menu = rofi -show drun
 # Autostart necessary processes (like notifications daemons, status bars, etc.)
 # Or execute your favorite apps at launch like this:
 
-exec-once = waybar
 exec-once = variety
 # exec-once = $terminal
 # exec-once = nm-applet &
@@ -59,6 +58,7 @@ exec-once = variety
 
 # See https://wiki.hyprland.org/Configuring/Environment-variables/
 
+env = XCURSOR_THEME, ArcDusk-cursors
 env = XCURSOR_SIZE,20
 env = HYPRCURSOR_SIZE,20
 
@@ -184,6 +184,9 @@ input {
     kb_options =
     kb_rules =
 
+    repeat_delay = 300
+    repeat_rate = 30
+
     follow_mouse = 1
 
     sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
@@ -196,7 +199,7 @@ input {
 
 # https://wiki.hyprland.org/Configuring/Variables/#gestures
 gestures {
-    workspace_swipe = false
+    workspace_swipe = true
 }
 
 # Example per-device config
@@ -275,6 +278,29 @@ bind = $mainMod, mouse_up, workspace, e+1
 # Move/resize windows with mainMod + LMB/RMB and dragging
 bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
+
+# Move focused window
+bind = $mainMod SHIFT, H, movewindow, l
+bind = $mainMod SHIFT, L, movewindow, r
+bind = $mainMod SHIFT, K, movewindow, u
+bind = $mainMod SHIFT, J, movewindow, d
+
+# Resize focused window
+# Enter resize mode
+bind = $mainMod CTRL, R, submap, resize
+
+# Create a submap for resize mode
+submap = resize
+    # Resize commands (repeatable while holding)
+    binde = , H, resizeactive, -20 0
+    binde = , L, resizeactive, 20 0
+    binde = , K, resizeactive, 0 -20
+    binde = , J, resizeactive, 0 20
+    
+    # Exit resize mode
+    bind = , escape, submap, reset
+    bind = $mainMod CTRL, R, submap, reset
+submap = reset
 
 # Laptop multimedia keys for volume and LCD brightness
 bindel = ,XF86AudioRaiseVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%+
