--- a/hyprland.conf
+++ b/hyprland.conf
@@ -231,7 +231,9 @@ bind = $mainMod SHIFT, F, fullscreen, 0
 bind = $mainMod, W, togglegroup
 bind = $mainMod, L, changegroupactive, f
 bind = $mainMod, H, changegroupactive, b
+
 bind = $mainMod, B, exec, pgrep -x "waybar" > /dev/null && pkill waybar || waybar &
+bind = $mainMod CTRL, L, exec, swaylock -f -c 000000
 
 bind = $mainMod, Print, exec, grim ~/Pictures/Screenshots/screenshot_$(date +%s).png   # Screenshot full screen
 bind = $mainMod SHIFT, Print, exec, grim -g "$(slurp)" ~/Pictures/Screenshots/screenshot_$(date +%s).png   # Screenshot region
