hide cursor after five seconds of inactivity

--- a/hyprland.conf
+++ b/hyprland.conf
@@ -342,3 +342,8 @@ xwayland {
     enabled = true
     force_zero_scaling = true
 }
+
+# Hide the mouse cursor
+cursor {
+    inactive_timeout = 5
+}
