--- a/hyprland.conf
+++ b/hyprland.conf
@@ -47,6 +47,7 @@ $menu = rofi -show drun
 # Or execute your favorite apps at launch like this:
 
 exec-once = variety
+exec-once = mako
 # exec-once = $terminal
 # exec-once = nm-applet &
 # exec-once = waybar & hyprpaper & firefox
