--- a/hyprland.conf
+++ b/hyprland.conf
@@ -48,9 +48,10 @@ $menu = rofi -show drun
 
 exec-once = variety
 exec-once = mako
+exec-once = /usr/libexec/lxqt-policykit-agent &
+exec-once = waybar
 # exec-once = $terminal
 # exec-once = nm-applet &
-# exec-once = waybar & hyprpaper & firefox
 
 
 #############################
@@ -245,6 +246,7 @@ bind = $mainMod, H, movefocus, l
 bind = $mainMod, L, movefocus, r
 bind = $mainMod, K, movefocus, u
 bind = $mainMod, J, movefocus, d
+
 
 # Switch workspaces with mainMod + [0-9]
 bind = $mainMod, 1, workspace, 1
