--- a/hyprland.conf
+++ b/hyprland.conf
@@ -50,6 +50,7 @@ exec-once = variety
 exec-once = mako
 exec-once = /usr/libexec/lxqt-policykit-agent &
 exec-once = waybar
+exec-once = easyeffects
 # exec-once = $terminal
 # exec-once = nm-applet &
 
